--- a/aiproj.tex
+++ b/aiproj.tex
@@ -81,9 +81,13 @@ as criteria for preferring larger (non-trivial) solutions.
 After implementing the algorithm to solve standard combinatory logic
 problems, I would also like to encode Boolean and Natural Number
 problems via Church encodings. Then, I would like to compare
-higher-order, combinator-based GP to standard GP on boolean and
+higher-order, combinator-based GP to standard (Koza) GP on boolean and
 number problems using first-order primitives (I expect the general
 algorithm to do worse, but hopefully not significantly worth).
+
+Additionally, I would like to test if Kuchs' algorithm scales to using
+mutiple variables in equations and repeated variables in equations.
+
 Finally, I would like to attempt a novel extension of Fuchs' algorithm
 to combinatory logic with other primitive datatypes and operations.
 This is called ``illative combinatory logic''. In affect, this means
