--- a/week1.tex
+++ b/week1.tex
@@ -97,5 +97,11 @@ similarity/difference based on the number of shared application nodes
 containing identical sides, equal leaves, or an unequal number of
 branches versus leaves.
 
+\subsection{Improvements}
+
+90 percent probability on nodes rather than leaves.
+
+Tournament selection.
+
 \end{document}
 
