--- a/report.tex
+++ b/report.tex
@@ -24,7 +24,9 @@ reductions have occurred. This ends up being a restricted form of a
 semantic unification problem that has several universally quantified
 variables and a single existential variable. The left hand-side of the
 equation is always the existential variable applied to some number of
-arbitrary expressions, and the right-hand side is an arbitrary expression.
+arbitrary expressions, and the right-hand side is an arbitrary
+expression. A futher restriction is that the aforementioned arbitrary
+expressions cannot include the existential variable.
 
 Notably, the a solution for an existential variable can be a
 higher-order term -- a function that takes other functions as
