--- a/report.tex
+++ b/report.tex
@@ -186,6 +186,14 @@ subnodes of the second parent by whether they are
 less-than-or-equal-to the maximum depth minus the distance from the
 point of the first parent to the root.
 
+\subsection{Portion of Project Completed}
+
+I implemented all the functionality I set out to for the project, but
+I only tested boolean problems in the Hilbert system portion (I also wanted to
+test more boolean problems and numeric problems). Additionally, I
+evaluated my results by manual inspection of output data, and I wanted
+to make some fancy graphs to more easily identify good learning.
+
 \section{Unanticipated Obstacles}
 
 About midway through the course I added partial evaluation to my GP
